# pie-modules

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: release.yml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  labeler.yml  release.yml  test.yaml
src/pie_models/: documents.py
src/pie_models/document/processing/: __init__.py  regex_partitioner.py  tokenization.py
src/pie_models/documents/: __init__.py  annotation.py  document.py
src/pie_models/metrics/: span_length_collector.py
src/pie_models/models/: __init__.py  classification_with_pooler.py  sequence_classification.py  text_classification_with_pooler.py  token_classification_with_seq2seq_encoder_and_crf.py
src/pie_models/models/components/: pooler.py  seq2seq_encoder.py
src/pie_models/taskmodules/: __init__.py  re_text_classification_with_indices.py
src/pie_modules/: annotations.py  documents.py  utils.py
src/pie_modules/document/: types.py
src/pie_modules/document/processing/: __init__.py  merge_multi_spans.py  merge_spans_via_relation.py  regex_partitioner.py  relation_argument_sorter.py  sentence_splitter.py  text_pair.py  text_span_trimmer.py  tokenization.py
src/pie_modules/metrics/: __init__.py  confusion_matrix.py  f1.py  relation_argument_distance_collector.py  span_coverage_collector.py  span_length_collector.py  squad_f1.py  statistics.py
src/pie_modules/models/: __init__.py  default_model.py  interface.py  pointer_network_model.py  sequence_classification.py  sequence_classification_with_pooler.py  simple_extractive_question_answering.py  simple_generative.py  simple_pointer_network.py  simple_sequence_classification.py  simple_similarity.py  simple_token_classification.py  span_similarity.py  span_tuple_classification.py  token_classification_with_seq2seq_encoder_and_crf.py
src/pie_modules/models/base_models/: __init__.py  bart_as_pointer_network.py  bart_with_decoder_position_ids.py
src/pie_modules/models/common/: __init__.py  has_taskmodule.py  model.py  model_with_boilerplate.py  model_with_metrics_from_taskmodule.py
src/pie_modules/models/components/: pointer_head.py  pooler.py  seq2seq_encoder.py
src/pie_modules/models/mixins/: __init__.py  (+1 more)
src/pie_modules/taskmodules/: __init__.py  cross_text_binary_coref.py  cross_text_binary_coref_nli.py  extractive_question_answering.py  labeled_span_extraction_by_token_classification.py  pointer_network_for_end2end_re.py  pointer_network_for_joint_taskmodule.py  pointer_network_taskmodule.py  pointer_network_taskmodule_for_end2end_re.py  re_span_pair_classification.py  re_text_classification_with_indices.py  text_to_text.py  token_classification.py
src/pie_modules/utils/: __init__.py  dictionary.py  hydra.py  span.py  tokenization.py
tests/: __init__.py  conftest.py  test_annotations.py  test_documents.py  test_utils.py
tests/document/processing/: test_merge_multi_spans.py  test_merge_spans_via_relation.py  test_regex_partitioner.py  test_relation_argument_sorter.py  test_sentence_splitter.py  test_text_pair.py  test_text_span_trimmer.py  test_tokenization.py
tests/metrics/: test_confusion_matrix.py  test_f1.py  test_relation_argument_distance_collector.py  test_span_coverage_collector.py  test_span_length_collector.py  test_squad_f1.py  test_statistics.py
tests/models/: test_extractive_question_answering.py  test_pointer_network_model.py  test_pointer_network_model_predict.py  test_pointer_network_model_predict_with_other_weights.py  test_pointer_network_model_with_other_weights.py  test_seqeunce_classification.py  test_sequence_classification.py  test_sequence_classification_with_pooler.py  test_sequence_pair_similarity_model_with_pooler.py  test_simple_generative.py  test_simple_generative_pointer.py  test_simple_generative_pointer_predict.py  test_simple_generative_predict.py  test_simple_pointer_network.py  test_simple_pointer_network_predict.py  test_simple_pointer_network_predict_with_other_weights.py  test_simple_pointer_network_with_other_weights.py  test_simple_sequence_classification.py  test_simple_token_classification.py  test_span_tuple_classification.py  test_text_classification_with_pooler.py  test_token_classification_with_seq2seq_encoder_and_crf.py  test_transformer_text_classification.py
tests/models/base_models/: test_bart_as_pointer_network.py  test_bart_with_decoder_position_ids.py
tests/models/components/: test_pointer_head.py  test_pooler.py  test_seq2seq_encoder.py
tests/models/pointer_network/: test_bart_as_pointer_network.py
tests/taskmodules/: test_cross_text_binary_coref.py  test_cross_text_binary_coref_nli.py  test_extractive_question_answering.py  test_labeled_span_extraction_by_token_classification.py  test_pointer_network_for_end2end_re.py  test_pointer_network_for_joint_taskmodule.py  test_pointer_network_taskmodule.py  test_pointer_network_taskmodule_for_end2end_re.py  test_re_span_pair_classification.py  test_re_text_classification_with_indices.py  test_text2text.py  test_text2text_with_guidance.py  test_text2text_with_source.py  test_token_classification.py  test_transformer_re_text_classification.py
tests/taskmodules/common/: test_interfaces.py  test_metrics.py  test_mixins.py  test_taskmodule_with_document_converter.py  test_utils.py
tests/taskmodules/metrics/: test_precision_recall_and_f1_for_labeled_annotations.py  test_text.py  test_wrapped_layer_metrics_with_unbatch_and_decode_with_errors_function.py  test_wrapped_metric_with_prepare_function.py  test_wrapped_metric_with_unbatch_function.py
tests/taskmodules/pointer_network/: test_annotation_encoder_decoder.py  test_logits_processor.py
tests/utils/: test_dictionary.py  test_hydra.py  test_span.py  test_tokenization.py
tests/utils/sequence_tagging/: test_convert_annotation.py  test_encoding.py  test_ill_formed.py
(+47 files in other folders)
